added to app.js

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 
-  <div id='product-images'>
+  <div id='image-container'>
     <img id="left-product">
     <img id="center-product">
     <img id="right-product">
