worked on the picture selection project in app.js added chart to html

--- a/index.html
+++ b/index.html
@@ -5,18 +5,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lab 11</title>
-
+  <script src=""></script>
 </head>
 
 <body>
 
 
   <div id='image-container'>
+    <table id='image-info'></table>
     <img id="left-product">
     <img id="center-product">
     <img id="right-product">
   </div>
-  
+  <canvas id="myChart" width="400" height="400"></canvas>
 
   <script src="app.js"></script>
 </body>
